# AprendizajeSupervisado

./: pyproject.toml
notebooks/: consignas.ipynb
notebooks/grupo1/: Aprendizaje supervisado.ipynb  movimientos_curados4.parquet
notebooks/grupo2/: Preprocesado_test.ipynb  cupones_ds_test.parquet  cupones_no_supervisado.parquet  df_supervisado_agrupado_test.parquet  series_temporales.ipynb  sin_codificar.parquet  trabajo_practico_4_grupo2.ipynb
