[tool.poetry]
name = "aprendizajesupervisado"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pandas = "^1.3.2"
scikit-learn = "0.24.1"
matplotlib = "^3.4.3"
jupyterlab = "^3.1.9"
scipy = "1.6.1"
pyarrow = "^5.0.0"
fastparquet = "^0.7.1"
statsmodels = "^0.12.2"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
